--- a/tests/grid-masonry.html
+++ b/tests/grid-masonry.html
@@ -25,7 +25,7 @@
 
             <h1>Grid Masonry</h1>
 
-            <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l" uk-grid="masonry: true">
+            <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l" uk-grid="masonry: pack">
                 <div><div class="uk-panel"></div></div>
                 <div><div class="uk-panel"></div></div>
                 <div><div class="uk-panel"></div></div>
@@ -42,7 +42,7 @@
 
             <h1>With Parallax</h1>
 
-            <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l" uk-grid="masonry: true; parallax: 150">
+            <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l" uk-grid="masonry: pack; parallax: 150">
                 <div><div class="uk-panel"></div></div>
                 <div><div class="uk-panel"></div></div>
                 <div><div class="uk-panel"></div></div>
@@ -84,8 +84,8 @@
                         </tr>
                         <tr>
                             <td><code>masonry</code></td>
-                            <td>Boolean</td>
-                            <td>false</td>
+                            <td>Boolean|String</td>
+                            <td>false|pack|next</td>
                             <td>Enables masonry layout for this grid.</td>
                         </tr>
                         <tr>
