--- a/tests/grid-masonry.html
+++ b/tests/grid-masonry.html
@@ -94,6 +94,12 @@
                             <td>0</td>
                             <td>Parallax translation value. The value must be a positive integer. Falsy disables the parallax effect (default).</td>
                         </tr>
+                        <tr>
+                            <td><code>parallax-justify</code></td>
+                            <td>Boolean</td>
+                            <td>false</td>
+                            <td>With parallax enabled, all columns will reach the bottom at the same time.</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
