--- a/tests/grid-parallax.html
+++ b/tests/grid-parallax.html
@@ -85,21 +85,21 @@
             <h2>Justify Columns</h2>
 
             <div class="test">
-                <div class="uk-child-width-1-2@ uk-child-width-1-3@m uk-child-width-1-3@l" uk-grid="parallax: 200; justify-columns: true">
-                    <div><div class="uk-panel">1</div></div>
-                    <div><div class="uk-panel">2</div></div>
-                    <div><div class="uk-panel">3</div></div>
-                    <div><div class="uk-panel">4</div></div>
-                    <div><div class="uk-panel">5</div></div>
-                    <div><div class="uk-panel">6</div></div>
-                    <div><div class="uk-panel">7</div></div>
-                    <div><div class="uk-panel">8</div></div>
-                    <div><div class="uk-panel">9</div></div>
-                    <div><div class="uk-panel">10</div></div>
-                    <div><div class="uk-panel">11</div></div>
-                    <div><div class="uk-panel">12</div></div>
-                    <div><div class="uk-panel">13</div></div>
-                    <div><div class="uk-panel">14</div></div>
+                <div class="uk-child-width-1-2@ uk-child-width-1-3@m uk-child-width-1-3@l" uk-grid="parallax: 0; parallax-justify: true">
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
+                    <div><div class="uk-panel"></div></div>
                 </div>
             </div>
 
@@ -130,8 +130,8 @@
                         </tr>
                         <tr>
                             <td><code>masonry</code></td>
-                            <td>Boolean</td>
-                            <td>false</td>
+                            <td>Boolean|String</td>
+                            <td>false|pack|next</td>
                             <td>Enables masonry layout for this grid.</td>
                         </tr>
                         <tr>
@@ -141,7 +141,7 @@
                             <td>Parallax translation value. The value must be a positive integer. Falsy disables the parallax effect (default).</td>
                         </tr>
                         <tr>
-                            <td><code>justify-columns</code></td>
+                            <td><code>parallax-justify</code></td>
                             <td>Boolean</td>
                             <td>false</td>
                             <td>With parallax enabled, all columns will reach the bottom at the same time.</td>
