--- a/tests/grid.html
+++ b/tests/grid.html
@@ -641,8 +641,8 @@
                         </tr>
                         <tr>
                             <td><code>masonry</code></td>
-                            <td>Boolean</td>
-                            <td>false</td>
+                            <td>Boolean|String</td>
+                            <td>false|pack|next</td>
                             <td>Enables masonry layout for this grid.</td>
                         </tr>
                         <tr>
@@ -650,6 +650,12 @@
                             <td>Number</td>
                             <td>0</td>
                             <td>Parallax translation value. The value must be a positive integer. Falsy disables the parallax effect (default).</td>
+                        </tr>
+                        <tr>
+                            <td><code>parallax-justify</code></td>
+                            <td>Boolean</td>
+                            <td>false</td>
+                            <td>With parallax enabled, all columns will reach the bottom at the same time.</td>
                         </tr>
                     </tbody>
                 </table>
