去除不常用的图标，增加部分电商物流向的图标

--- a/tests/icon.html
+++ b/tests/icon.html
@@ -16,7 +16,86 @@
 
             <div uk-grid>
                 <div class="uk-width-expand@m">
-
+                    <h2>New Icon</h2>
+                    <div class="uk-grid-small uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
+                    <div>
+                        <ul class="uk-list">
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-daifahuo; ratio:1"></span>shop-daifahuo</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-daifukuan; ratio:1"></span>shop-daifukuan</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-weibiaoti527; ratio:1"></span>shop-weibiaoti527</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-fukuan; ratio:1"></span>shop-fukuan</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-kefu; ratio:1"></span>shop-kefu</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-fenlei; ratio:1"></span>shop-fenlei</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-gouwuche; ratio:1"></span>shop-gouwuche</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-tuikuan; ratio:1"></span>shop-tuikuan</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-gerenzhongxin; ratio:1"></span>shop-gerenzhongxin</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-jubao; ratio:1"></span>shop-jubao</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul class="uk-list">
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-anquanbaozhang; ratio:1"></span>shop-anquanbaozhang</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-xiaoxi-zhihui; ratio:1"></span>shop-xiaoxi-zhihui</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-gengduo; ratio:1"></span>shop-gengduo</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-shouye-zhihui; ratio:1"></span>shop-shouye-zhihui</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-fanhui; ratio:1"></span>shop-fanhui</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-kuaijiezhifu; ratio:1"></span>shop-kuaijiezhifu</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-zhifudingjin; ratio:1"></span>shop-zhifudingjin</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-kaitongfuwu; ratio:1"></span>shop-kaitongfuwu
+                        </li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-qianshuxieyi; ratio:1"></span>shop-qianshuxieyi</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-dianpu; ratio:1"></span>shop-dianpu</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul class="uk-list">
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-tijiaoyanzi; ratio:1"></span>shop-tijiaoyanzi
+                        </li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-zhuanruzijin; ratio:1"></span>shop-zhuanruzijin</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-yanziwancheng; ratio:1"></span>shop-yanziwancheng</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-fenxiang; ratio:1"></span>shop-fenxiang</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-zaixianyanzi; ratio:1"></span>shop-zaixianyanzi</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-shangchuantupian; ratio:1"></span>shop-shangchuantupian</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-dingwei; ratio:1"></span>shop-dingwei</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-tianxuangouren; ratio:1"></span>shop-tianxuangouren</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-zy_peisong; ratio:1"></span>shop-zy_peisong
+                        </li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-wuliupeisong-; ratio:1"></span>shop-wuliupeisong-</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul class="uk-list">
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-wuliupeisong-1; ratio:1"></span>shop-wuliupeisong-1</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-yunshuzhongwuliu; ratio:1"></span>shop-yunshuzhongwuliu</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-chuku; ratio:1"></span>shop-chuku</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-ruku; ratio:1"></span>shop-ruku</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-yunshu; ratio:1"></span>shop-yunshu</li>
+                        <li><span class="uk-margin-small-right"
+                            uk-icon="icon: shop-paisongtixing; ratio:1"></span>shop-paisongtixing</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-yuchuku; ratio:1"></span>shop-yuchuku</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-yunshu1; ratio:1"></span>shop-yunshu1</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-yunshu2; ratio:1"></span>shop-yunshu2</li>
+                        <li><span class="uk-margin-small-right" uk-icon="icon: shop-01_zitidian; ratio:1"></span>shop-01_zitidian
+                        </li>
+                        </ul>
+                    </div>
+                    </div>
                     <h2>List</h2>
 
                     <div class="uk-grid-small uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
